packages/cashc/test/compiler/ParseError/incorrect_underscore_in_number_3.cash
contract Test() {
    function hello() {
        require(1000 == 1000_);
    }
}
